<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_home">

    <Button
            android:text="@string/sign_up"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/debugToSignUp"
            android:layout_marginBottom="516dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_conversion_wrapWidth="231"
            tools:layout_conversion_wrapHeight="126"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/debugToSignIn"
            app:layout_constraintTop_toBottomOf="@+id/debugToSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"/>

    <Button
            android:text="@string/google_login"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/debugGoogleLogin"
            app:layout_constraintTop_toBottomOf="@id/debugToSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"/>

    <Button
            android:text="@string/google_logout"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/debugGoogleLogout"
            app:layout_constraintTop_toBottomOf="@id/debugGoogleLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"/>
    <Button
            android:text="@string/is_loged_in"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/debugLogedIn"
            app:layout_constraintTop_toBottomOf="@id/debugGoogleLogout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"/>

    <Button
            android:text="@string/get_curret_idp_type"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/debugIdpType"
            app:layout_constraintTop_toBottomOf="@id/debugLogedIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"/>

    <Button
            android:text="@string/get_access_token"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/debugAccessToken"
            app:layout_constraintTop_toBottomOf="@id/debugIdpType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"/>

    <Button
            android:text="@string/get_email"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/debugEmail"
            app:layout_constraintTop_toBottomOf="@id/debugAccessToken"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="1dp"/>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            app:layout_constraintTop_toBottomOf="@id/debugEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="370dp">

        <TextView
                android:textColor="#FFFFFF"
                android:id="@+id/tokenView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>