<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.UserSignUpFragment">

    <ImageButton
            android:id="@+id/userSignUpGoogle"
            android:text="@string/google"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:src="@mipmap/signgoogle_hdpi"
            android:layout_marginTop="60dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/ou"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textOU"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/userSignUpGoogle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signUpUsername"
            android:autofillHints=""
            android:hint="@string/user_name_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:targetApi="o" android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textOU"/>

    <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signUpEmail"
            android:autofillHints=""
            android:hint="email"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/signUpUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" tools:targetApi="o"/>

    <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signUpPassword"
            android:hint="@string/password_sign_up"
            android:autofillHints=""
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" tools:targetApi="o"/>
    <Button
            android:text="@string/signup_to_kroom"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/signUpAction"
            android:layout_marginTop="32dp"
            android:background="#009688"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="#FFFFFF"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpLoading"
            android:visibility="invisible"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpAction"/>

</android.support.constraint.ConstraintLayout>