<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/linearlayoutEventPublic"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/itemTrackVoteEventUserMaster"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxLines="2"
                android:text="@string/event_user_master"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="12sp"
                tools:ignore="RtlCompat"/>
        <TextView
                android:id="@+id/itemTrackVoteEventName"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:TextSize="5sp"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxLines="1"
                android:text="@string/event_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="12sp"
                tools:ignore="RtlCompat" android:baselineAligned="false"/>
        <TextView
                android:id="@+id/itemTrackVoteEventSchedule"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxLines="1"
                android:text="@string/event_schedule"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="12sp"
                tools:ignore="RtlCompat"/>
        <TextView
                android:id="@+id/itemTrackVoteEventLocation"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxLines="1"
                android:text="@string/event_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="12sp"
                tools:ignore="RtlCompat"/>

        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/itemTrackVoteEventSwitch"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxLines="1"
                tools:ignore="RtlCompat"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/itemTrackVoteEventsSubcribe"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxLines="1"/>



    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>